force-app/main/default/objects/Asset_Usage_Log__c/Asset_Usage_Log__c.object-meta.xml
<CustomObject>
    <description>Asset &amp; Equipment Lifecycle Management App - For logging daily or periodic usage details.</description>
    <label>Asset Usage Log</label>
    <nameField>
        <displayFormat>AUL-{00000}</displayFormat>
        <label>Asset Usage Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Usage Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>