force-app/main/default/objects/Asset_Usage_Log__c/fields/Related_Asset__c.field-meta.xml
<CustomField>
    <fullName>Related_Asset__c</fullName>
    <label>Related Asset</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Asset Usage Logs</relationshipLabel>
    <relationshipName>Asset_Usage_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>