force-app/main/default/objects/Asset_Usage_Log__c/fields/Usage_Type__c.field-meta.xml
<CustomField>
    <fullName>Usage_Type__c</fullName>
    <label>Usage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checkout</fullName>
            </value>
            <value>
                <fullName>Routine Use</fullName>
            </value>
            <value>
                <fullName>Issue Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>