force-app/main/default/objects/Asset_Usage_Log__c/fields/User_Technician__c.field-meta.xml
<CustomField>
    <fullName>User_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User/Technician</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Asset_Usage_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>