force-app/main/default/objects/Asset_Usage_Log__c/listViews/Asset_Usage_Logs.listView-meta.xml
<ListView>
    <fullName>Asset_Usage_Logs</fullName>
    <columns>NAME</columns>
    <columns>Related_Asset__c</columns>
    <columns>Usage_Type__c</columns>
    <columns>Notes__c</columns>
    <columns>User_Technician__c</columns>
    <columns>Timestamp__c</columns>
    <filterScope>Mine</filterScope>
    <label>Asset Usage Logs</label>
</ListView>